- Updated LESS to fix alignment of avatars.

--- a/RockWeb/Styles/_blocks-core.less
+++ b/RockWeb/Styles/_blocks-core.less
@@ -194,7 +194,7 @@
 
 .avatar {
   position: relative;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   width: 32px;
